<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Name_add_Activity">

    <View
        android:id="@+id/View0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@+id/view13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <View
        android:id="@+id/view19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-10dp"
        style="@style/Block"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/view13"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/IB"
        android:lines="1"
        android:onClick="Clicnext"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/IC"
        android:layout_marginTop="@dimen/IT"
        android:layout_marginEnd="@dimen/IC"
        style="@style/Block"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Setting_up_device"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/Device_name"
        app:layout_constraintBottom_toTopOf="@+id/View0"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@+id/view19"
        app:layout_constraintStart_toStartOf="@+id/view19"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        style="@style/Edit_Text"
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/Name"
        android:paddingLeft="10dp"
        android:text="@string/Device"
        app:layout_constraintBottom_toTopOf="@+id/view13"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@+id/view19"
        app:layout_constraintStart_toStartOf="@+id/view19"
        app:layout_constraintTop_toBottomOf="@+id/View0"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>