<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Set_bottom_activity">

    <View
        android:visibility="invisible"
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/view13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        style="@style/Button"
        android:id="@+id/view21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:onClick="ClicUp"
        android:padding="20dp"
        android:text="@string/Up"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        style="@style/Button"
        android:id="@+id/view22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:lines="1"
        android:onClick="ClicDown"
        android:text="@string/Down"
        app:layout_constraintBottom_toTopOf="@+id/view13"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/view13"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/IB"
        android:lines="1"
        android:onClick="ClicSave"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2" />

    <Button
        style="@style/Button"
        android:id="@+id/ButtonStop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:onClick="ClicStop"
        android:padding="10dp"
        android:text="@string/Stop"
        app:layout_constraintBottom_toBottomOf="@+id/view22"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view21" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="@dimen/IC"
        android:layout_marginTop="@dimen/IT"
        android:layout_marginEnd="@dimen/IC"
        style="@style/Block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Bottom_pos"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />


</androidx.constraintlayout.widget.ConstraintLayout>