<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Speed_Activity">

    <View
        android:visibility="invisible"
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/view23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <Button
        style="@style/Button"
        android:id="@+id/view21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:onClick="ClicUp"
        android:padding="20dp"
        android:text="@string/Up"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

    <Button

        style="@style/Button"
        android:id="@+id/view22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:lines="1"
        android:onClick="ClicDown"
        android:text="@string/Down"
        app:layout_constraintBottom_toTopOf="@+id/view23"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/view13"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/IB"
        android:lines="1"
        android:onClick="ClicNext"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2" />

    <Button
        style="@style/Button"
        android:id="@+id/ButtonStop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:onClick="ClicStop"
        android:padding="10dp"
        android:text="@string/Stop"
        app:layout_constraintBottom_toBottomOf="@+id/view22"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view21" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/IC"
        android:layout_marginTop="@dimen/IT"
        android:layout_marginEnd="@dimen/IC"
        style="@style/Block"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view23"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        style="@style/Block"
        app:layout_constraintBottom_toTopOf="@+id/view13"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view24" />

    <View
        android:elevation="5dp"
        android:id="@+id/view24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="6:1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/blok_2_2"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="@+id/view23"
        app:layout_constraintStart_toStartOf="@+id/view23" />

    <TextView
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Speed"
        app:layout_constraintBottom_toBottomOf="@+id/view24"
        app:layout_constraintEnd_toEndOf="@+id/view24"
        app:layout_constraintStart_toStartOf="@+id/view24"
        app:layout_constraintTop_toTopOf="@+id/view24" />

    <SeekBar
        android:elevation="5dp"
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="5:1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:max="1000"
        android:maxHeight="20dp"
        android:min="0"
        android:minHeight="20dp"
        android:progress="400"
        android:progressDrawable="@drawable/seekbar_style"
        android:splitTrack="false"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toTopOf="@+id/view13"
        app:layout_constraintEnd_toEndOf="@+id/view23"
        app:layout_constraintStart_toStartOf="@+id/view23" />

    <TextView
        style="@style/Text"
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Adjust_the_Speed"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />


</androidx.constraintlayout.widget.ConstraintLayout>