<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_device">


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/IC"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/IC"
        style="@style/Block"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/Back"
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="Clic3"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/Text"
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Add_Device"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        style="@style/Icon"
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:onClick="ClicCode"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_add_link_24" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    style="@style/Block"
                    android:id="@+id/view7"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/IC"
                    android:layout_marginTop="-5dp"
                    android:layout_marginEnd="@dimen/IC"
                    android:layout_marginBottom="-10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/editCode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textCode" />

                <TextView
                    style="@style/Text"
                    android:id="@+id/textCode"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Code"
                    app:layout_constraintDimensionRatio="6:1"
                    app:layout_constraintEnd_toEndOf="@+id/view3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/view3"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editCode"
                    style="@style/Edit_Text"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/Code"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/view3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/view3"
                    app:layout_constraintTop_toBottomOf="@+id/textCode" />


                <TextView
                    android:id="@+id/textOR"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/OR"
                    android:textColor="?colorSecondaryVariant"
                    app:layout_constraintDimensionRatio="5:1"
                    app:layout_constraintEnd_toEndOf="@+id/view3"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/view3"
                    app:layout_constraintTop_toBottomOf="@+id/editCode" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/IC"
                    android:layout_marginTop="-5dp"
                    android:layout_marginEnd="@dimen/IC"
                    android:layout_marginBottom="-10dp"
                    style="@style/Block"
                    app:layout_constraintBottom_toBottomOf="@+id/editText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/networkName"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    style="@style/Text"
                    android:id="@+id/networkName"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Network_Name"
                    app:layout_constraintDimensionRatio="6:1"
                    app:layout_constraintEnd_toEndOf="@+id/view3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/view3"
                    app:layout_constraintTop_toBottomOf="@+id/textOR" />

                <EditText
                    style="@style/Edit_Text"
                    android:singleLine="true"
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/Name"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/view3"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/view3"
                    app:layout_constraintTop_toBottomOf="@+id/networkName" />

                <View
                    android:id="@+id/view10"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/IC"
                    android:layout_marginTop="-5dp"
                    android:layout_marginEnd="@dimen/IC"
                    android:layout_marginBottom="-10dp"
                    style="@style/Block"
                    app:layout_constraintBottom_toBottomOf="@+id/editText2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView1" />

                <TextView
                    style="@style/Text"
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Network_Password"
                    app:layout_constraintDimensionRatio="6:1"
                    app:layout_constraintEnd_toEndOf="@+id/view10"
                    app:layout_constraintStart_toStartOf="@+id/view10"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />

                <EditText
                    android:singleLine="true"
                    style="@style/Edit_Text"
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/Password"
                    app:layout_constraintEnd_toEndOf="@+id/view10"
                    app:layout_constraintStart_toStartOf="@+id/view10"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/button3"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/IC"
        android:layout_marginEnd="@dimen/IC"
        android:onClick="Clic1"
        android:text="@string/Conect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>